--- a/styles.css
+++ b/styles.css
@@ -147,17 +147,30 @@
     }
 
     /* profile */
-    .title{
+    .title1{
         justify-content: center;
         padding: 12px;
         text-align: center;
+        font-size: 40px;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    }
+    .title :hover{
+        transform: scale(1.05);
     }
     .pic{
         display: flex;
         justify-content: center;
         padding: 10px;
     }
+
     .pich-item{
+        max-width: 1140px;
+        justify-content: center;
+        text-align: center;
+        font-size: 20px;
+        font-family: monospace;
+    }
+    .pich-item1{
         max-width: 1140px;
         justify-content: center;
         text-align: center;
@@ -168,10 +181,12 @@
         box-shadow: 0 0 10px;
         align-items: center;
     }
-    .pich-item p{
+
+    /* กรอบ education */
+    .pich-item1 {
         font-family: 'Times New Roman', Times, serif;
         font-size: 20px;
-        color: rgb(0, 0, 0);
+        color: rgb(255, 255, 255);
     }
 
     .content{
@@ -181,12 +196,66 @@
         margin: 0 auto;
         column-gap: 14px;
     }
+
+    /* กรอบ Profile */
     .content-item{
-        
         padding: 12px;
-        background-color: rgb(0, 0, 0);
-        color: rgb(255, 255, 255);
+        background-color: rgb(1, 78, 11);
+        color: rgb(229, 240, 230);
         border-radius: 25px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0);
     }
-    
+
+    /* home */
+    .container2 {
+        max-width: 1000px;
+        justify-content: center;
+        text-align: center;
+        animation-fill-mode: none;
+    }
+
+    .content :hover{
+        transform: scale(1.05);
+    }
+
+    .pich-item :hover{
+        transform: scale(1.05);
+    }
+
+    .title1{
+        /* กรอบโปรไฟล์ */
+        padding: 12px;
+        background-color: rgb(10, 136, 17);
+        color: rgb(255, 255, 255);
+        box-shadow:0 5px 0 rgb(71, 71, 71),0 4px 20px 0;
+    }
+
+    .title :hover{
+        transform: scale(1.05);
+    }
+
+    /* ตัวหนังสือ education  */
+    .content-item4{
+        padding: 12px;
+        background-color: rgb(1, 78, 11);
+        color: rgb(229, 240, 230);
+        border-radius: 25px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0);
+    }
+
+        /* profile */
+        .title2{
+            justify-content: center;
+            padding: 12px;
+            text-align: center;
+            font-size: 40px;
+            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+            
+    }
+
+    /* คอนเเทค */
+
+
+
+
+
